argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"        
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"    
spec:
  rules:
  - host: argocd.armenashoti.xyz  
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server    
            port:
              number: 443
